@startuml paint shape strategy class diagram 
title Paint Shape Strategy Class Diagram 

class PaintShape {
    - ShapeType: shapeType
    - IPaintStrategy: paintStrategy
}

interface IPaintStrategy {
    + paint()
}


class RectanglePaintStrategy {
}

class TrianglePaintStrategy {
}
 
class EllipsePaintStrategy {
}

RectanglePaintStrategy ..|> IPaintStrategy
TrianglePaintStrategy ..|> IPaintStrategy
EllipsePaintStrategy ..|> IPaintStrategy
PaintShape --o IPaintStrategy

@enduml
